# fyles-release

./: .gitignore  README.md
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  macos-autostart-setup.md  why_fyles.md
docs/architecture/: backend.md  deployment.md  frontend.md  networking.md  security.md  wire-protocol.md
fyles_service/: Cargo.toml  DESIGN_PATTERNS.md  flake.nix  rust-toolchain.toml
fyles_service/core/: Cargo.toml  build.rs
fyles_service/core/src/: core.rs  io_controller.rs  lib.rs  library.rs  mocks.rs
fyles_service/core/src/core/: api_server.rs  brain.rs  db.rs  domain_models.rs  domain_proto_conversion.rs  filerequest_drive_handler.rs  notification.rs  p2p.rs
fyles_service/core/src/core/api_server/: stream_registry.rs  tcp_token_interceptor.rs
fyles_service/core/src/core/brain/: action.rs  action_client.rs  action_p2p.rs  action_test.rs  error.rs  handle_action.rs  stale_cleanup.rs  types.rs
fyles_service/core/src/core/db/: test.rs
fyles_service/core/src/mocks/: db.rs  p2p.rs
fyles_service/crypto/: Cargo.toml
fyles_service/crypto/src/: lib.rs  rolling_nonce_window.rs
fyles_service/daemon/: Cargo.toml
fyles_service/daemon/src/: main.rs
fyles_service/direct_host_utils/: Cargo.toml
fyles_service/direct_host_utils/i18n/: ar-SA.ftl  bg-BG.ftl  bs-BA.ftl  cs-CZ.ftl  da-DK.ftl  de-DE.ftl  el-GR.ftl  en-US.ftl  es-ES.ftl  et-EE.ftl  fi-FI.ftl  fr-FR.ftl  ga-IE.ftl  hi-IN.ftl  hr-HR.ftl  hu-HU.ftl  id-ID.ftl  is-IS.ftl  it-IT.ftl  ja-JP.ftl  ko-KR.ftl  lt-LT.ftl  lv-LV.ftl  mk-MK.ftl  mt-MT.ftl  nb-NO.ftl  nl-NL.ftl  pl-PL.ftl  pt-BR.ftl  pt-PT.ftl  ro-RO.ftl  ru-RU.ftl  sk-SK.ftl  sl-SI.ftl  sq-AL.ftl  sr-RS.ftl  sv-SE.ftl  tr-TR.ftl  uk-UA.ftl  zh-CN.ftl  (+1 more)
fyles_service/direct_host_utils/src/: direct_fs_controller.rs  i18n.rs  lib.rs  tracing.rs
fyles_service/p2p/: Cargo.toml
fyles_service/p2p/src/: behaviour.rs  command.rs  crypto.rs  data_structures.rs  event_loop.rs  file_encryptor.rs  file_reader.rs  lib.rs  send_receive_traits.rs  tests.rs  types.rs  utils.rs
fyles_service/p2p/src/data_structures/: idle_expiry_map.rs  scoped_expiry_map.rs
fyles_service/p2p/src/event_loop/: filerequest.rs  handle_behavior_event.rs  handle_contact_invite_event.rs  handle_file_request_event.rs  handle_mdns_event.rs  handle_self_contact_invite_event.rs  handle_session_establishment_event.rs  trait_impls.rs  with_swarm.rs
fyles_service/p2p/src/event_loop/filerequest/: file_tracker.rs  receive_manager.rs  send_manager.rs
fyles_service/p2p/src/event_loop/trait_impls/: get_session.rs  request_receiver.rs  request_registry.rs  request_sender.rs  response_receiver.rs
fyles_service/p2p/src/send_receive_traits/: get_session.rs  request_receiver.rs  request_registry.rs  request_sender.rs  response_receiver.rs  session.rs  session_responder.rs  session_send_receive.rs
fyles_service/p2p/src/tests/: can_send_file_to_self_right_after_identity_change.rs  cancel_file.rs  check_file_size.rs  filerequest_access.rs  reconnect_reestablish_session.rs  renegotiate_session.rs  send_file_to_owned_device.rs  test_utils.rs  use_invite_challenge.rs
website/: CNAME  data-deletion.html  export-compliance.html  impressum.html  index.html  licenses.html  privacy.html  style.css  support.html  terms.html
wire/: filerequest.proto  nodestatus.proto
