[package]
name = "direct_host_utils"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
fluent = { workspace = true }
fyles-core = { workspace = true }
include-flate = { workspace = true }
notify-rust = { workspace = true }
sanitize-filename = { workspace = true }
sys-locale = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unic-langid = { workspace = true, features = ["unic-langid-macros"] }

tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["experimental_async_runtime"], optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tempfile.workspace = true
test-log.workspace = true

[features]
otel-jaeger = ["opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry", "opentelemetry-stdout", "opentelemetry_sdk"]
console = []
